# diffpack-io

./: .gitignore  CONTRIBUTING.md  README.md  astro.config.mjs  biome.json  package.json  playwright.config.ts  renovate.json  tsconfig.json  vercel.json
.github/workflows/: astro.yml
public/: nightfall.css  site.webmanifest
src/: middleware.ts
src/components/: BaseHead.astro  Tree.astro
src/components/FileExplorer/: FileExplorerPanel.astro  ResizerHandle.astro  TreeFilter.astro  TreeList.astro
src/components/FileViewer/: DiffArea.astro  ExpandAllContentButton.astro  ExpandButton.astro  FileViewer.astro  SplitViewButton.tsx  ThemeSelect.astro  ThemeSelect.tsx  Toolbar.astro  Toolbar.tsx
src/components/Header/: Header.astro  PackageSearch.astro  SearchInput.astro  SearchResults.astro  ThemeIcon.astro  ThemeToggle.tsx  VersionSelectors.astro
src/components/Icons/: DownloadIcon.tsx  FilterIcon.tsx  FoldDownIcon.tsx  FoldIcon.astro  FoldIcon.tsx  (+11 more)
src/layouts/: Layout.astro  SpaceBackground.astro
src/pages/: crates.astro  index.astro  npm.astro  pypi.astro  rubygems.astro
src/registries/: historyService.ts  registries.ts  searchService.ts  types.ts
src/styles/: global.css
src/utils/: backend.ts  dom.ts  theme.ts  types.ts  urlParser.ts
src/workers/: diff.worker.ts
tests/: benchmark.test.ts  npm-search.spec.ts
wasm/diff-wasm/: Cargo.toml
wasm/diff-wasm/benches/: tree_bench.rs
wasm/diff-wasm/pkg/: diff_wasm.d.ts  diff_wasm.js  diff_wasm_bg.js  diff_wasm_bg.wasm  diff_wasm_bg.wasm.d.ts  package.json
wasm/diff-wasm/src/: core.rs  lib.rs  package.rs
(+12 files in other folders)
