[package]
name = "diff-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
similar = "2.7"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
flate2 = "1.0"
tar = "0.4"

[[bench]]
name = "diff_bench"
harness = false

[[bench]]
name = "tree_bench"
harness = false

[profile.release]
opt-level = 'z'
codegen-units = 1
debug = false
lto = false
