[package]
name = "diff-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "WorkerGlobalScope", "Response"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
similar = "2.7"
flate2 = "1.1"
tar = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 'z'
codegen-units = 1
debug = false
lto = false
